syntax = "proto3";

import "google/protobuf/timestamp.proto";

import "object.proto";

package zitadel.v1.application;

message ApplicationIDRequest {
    project_id = ;
    app_id = ;
}

message ApplicationResponse {
    zitadel.v1.ReadMetaData meta_data = ;
    string id = ;
    string project_id = ;
    ApplicationState state = ;
    oneof config {
        OIDCConfig oidc = ;
    }
}

message SearchApplicationsRequest{
    zitadel.v1.SearchRequest meta_data = ;
    repeated ApplicationQuery queries = ;
}

message SearchApplicationResponse {
    zitadel.v1.SearchResposne meta_data = ;
    repeated ApplicationResponse result = ;
}

//TODO: comment on line 65
message CreateApplicationRequest {
    string project_id = ;
    string name = ;
}

//TODO: comment on line 65
message CreateApplicationResponse {}

message ApplicationQuery {
    oneof query {
        ApplicationNameQuery name = ;
    }
}

message ApplicationNameQuery {
    string name = ;
    zitadel.v1.SearchRequest meta_data = ;
}

enum ApplicationState {
    APPLICATION_STATE_UNSPECIFIED = ;
    APPLICATION_STATE_ACTIVE = ;
    APPLICATION_STATE_INACTIVE = ;
}

message OIDCConfig {
    repeated string redirect_uris = 1;
    repeated OIDCResponseType response_types = 2;
    repeated OIDCGrantType grant_types = 3;
    OIDCApplicationType application_type = 4;
    string client_id = 5;
    string client_secret = 6; //TODO: needed? maybe we should think of https://github.com/googleapis/googleapis/blob/master/google/api/field_behavior.proto for producing less messages. e.g. https://github.com/googleapis/googleapis/blob/f9cd594c912a2ff456cc2b33f54dcc238133bb0c/google/iam/admin/v1/iam.proto#L383
    OIDCAuthMethodType auth_method_type = 7;
    repeated string post_logout_redirect_uris = 8;
    OIDCVersion version = 9;
    bool none_compliant = 10;
    repeated zitadel.v1.LocalizedMessage compliance_problems = 11;
    bool dev_mode = 12;
    OIDCTokenType access_token_type = 13;
    bool access_token_role_assertion = 14;
    bool id_token_role_assertion = 15;
    bool id_token_userinfo_assertion = 16;
    google.protobuf.Duration clock_skew = 17;
}

enum OIDCVersion {
    OIDCV1_0 = 0;
}

enum OIDCTokenType {
    OIDCTokenType_Bearer = 0;
    OIDCTokenType_JWT = 1;
}

enum OIDCResponseType {
    OIDCRESPONSETYPE_CODE = 0;
    OIDCRESPONSETYPE_ID_TOKEN = 1;
    OIDCRESPONSETYPE_ID_TOKEN_TOKEN = 2;
}

enum OIDCGrantType {
    OIDCGRANTTYPE_AUTHORIZATION_CODE = 0;
    OIDCGRANTTYPE_IMPLICIT = 1;
    OIDCGRANTTYPE_REFRESH_TOKEN = 2;
}

enum OIDCApplicationType {
    OIDCAPPLICATIONTYPE_WEB = 0;
    OIDCAPPLICATIONTYPE_USER_AGENT = 1;
    OIDCAPPLICATIONTYPE_NATIVE = 2;
}

enum OIDCAuthMethodType {
    OIDCAUTHMETHODTYPE_BASIC = 0;
    OIDCAUTHMETHODTYPE_POST = 1;
    OIDCAUTHMETHODTYPE_NONE = 2;
}